hakkımda sayfası eklendi

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <body>
 <h1>Anasayfa</h1>
-<p>Ana Sayfaya Hoşgeldiniz</p>
+<p>Ana Sayfaya Hoşgeldiniz</p>  
+<a href="hakkimda.html">hakkımda</a>
 </body>
 </html>
+    
